Se corrigen los detalles en los lwc y se finalizan los test

--- a/force-app/main/default/lwc/pokeDetail/pokeDetail.css
+++ b/force-app/main/default/lwc/pokeDetail/pokeDetail.css
@@ -32,8 +32,9 @@
 }
 
 .type{
-    background-color: rgb(115, 121, 115);
+    background-color: goldenrod;
     border-radius: 5px;
     padding: 0.3rem;
     padding-inline: 1rem;
+    
 }
