--- a/force-app/main/default/lwc/pokeDetailInfo/pokeDetailInfo.css
+++ b/force-app/main/default/lwc/pokeDetailInfo/pokeDetailInfo.css
@@ -70,7 +70,15 @@ p {
     border: solid black 2px;
     display: flex;
     justify-content: center;
+    transition-duration: 0.6s;
 }
+
+.moves:hover{
+    transform: scale(105%);
+    cursor: pointer;
+}
+
+
 .ability{
     display: flex;
     flex-direction: column;
@@ -78,4 +86,14 @@ p {
     margin: 5px;
     border-radius: 20px;
     border: solid grey 2px;
+}
+
+.ability-name{
+    transition-duration: 0.2s;
+}
+.ability-name:hover{
+    font-weight: bolder;
+    text-decoration: underline;
+    cursor: pointer;
+
 }
